maintains jdk 8 for antsrc